--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "deploy": "bash deploy.sh",
     "updateTheme": "yarn remove vuepress-theme-vdoing && rm -rf node_modules && yarn && yarn add vuepress-theme-vdoing -D",
     "editFm": "node utils/editFrontmatter.js",
-	"baiduPush": "node utils/baiduPush.js https://easyget.vercel.app && node utils/91baiduPush.js https://www.91easyget.com && baiduPush.sh"
+	"baiduPush": "node utils/baiduPush.js https://easyget.vercel.app && node utils/91baiduPush.js https://www.91easyget.com && bash baiduPush.sh"
 	
   },
   "license": "MIT",
